--- a/appsettings.json
+++ b/appsettings.json
@@ -1,3 +1,10 @@
+
+{
+"ConnectionStrings": {
+ “dbConnection": "Data Source=.;Initial Catalog=DBName;integrated security=true;"
+
+},
+
 {
   "Logging": {
     "LogLevel": {
