--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,6 @@
-
-{
-"ConnectionStrings": {
- “dbConnection": "Data Source=.;Initial Catalog=DBName;integrated security=true;"
-
-},
-
-{
+ConnectionStrings: {
+  "databaseConn": "server= (localdb)\\MSSQLLocalDB ; database= db name ; Integrated Security=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
+}, {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
